--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@craco/craco": "^6.1.2",
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.0",
+    "@snowpack/plugin-postcss": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -16,8 +20,11 @@
     "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@testing-library/react": "^11.2.6",
     "@web/test-runner": "^0.13.3",
+    "autoprefixer": "^9.8.6",
     "chai": "^4.3.4",
+    "postcss": "^7.0.36",
     "prettier": "^2.2.1",
-    "snowpack": "^3.3.7"
+    "snowpack": "^3.3.7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
   }
 }
